--- a/Tyuiu.ShunanovKE.Sprint1.Task0.V0.Test/Tyuiu.ShunanovKE.Sprint1.Task0.V3.Tes.csproj
+++ b/Tyuiu.ShunanovKE.Sprint1.Task0.V0.Test/Tyuiu.ShunanovKE.Sprint1.Task0.V3.Tes.csproj
@@ -56,9 +56,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.ShunanovKE.Sprint1.Task0.V0.Lib\Tyuiu.ShunanovKE.Sprint1.Task0.V3.Lib.csproj">
+    <ProjectReference Include="..\Tyuiu.ShunanovKE.Sprint1.Task0.V0.Lib\Tyuiu.ShunanovKE.Sprint1.Task0.V3.Li.csproj">
       <Project>{307d6d1f-7fd4-4673-a913-0d5633bdc280}</Project>
-      <Name>Tyuiu.ShunanovKE.Sprint1.Task0.V3.Lib</Name>
+      <Name>Tyuiu.ShunanovKE.Sprint1.Task0.V3.Li</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
